--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "15.0.0-rc.0",
     "react": "19.0.0-rc-f994737d14-20240522",
     "react-dom": "19.0.0-rc-f994737d14-20240522",
+    "styled-components": "^6.1.13",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
